--- a/GoodHabitsApp/Base.lproj/Main.storyboard
+++ b/GoodHabitsApp/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wfZ-3i-FHQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wfZ-3i-FHQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -70,27 +70,31 @@
                             <imageView userInteractionEnabled="NO" alpha="0.75" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundimg" translatesAutoresizingMaskIntoConstraints="NO" id="tx1-ac-LCc">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNd-WO-BC5">
-                                <rect key="frame" x="16" y="68" width="343" height="23"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNd-WO-BC5">
+                                <rect key="frame" x="5" y="68" width="365" height="23"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RSD-xc-asF" customClass="FriendProgressBarView" customModule="GoodHabitsApp" customModuleProvider="target">
-                                <rect key="frame" x="87" y="151" width="200" height="200"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RSD-xc-asF" customClass="FriendProgressBarView" customModule="GoodHabitsApp" customModuleProvider="target">
+                                <rect key="frame" x="112" y="142" width="150" height="88"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="gNd-WO-BC5" firstAttribute="leading" secondItem="toz-ic-hC2" secondAttribute="leading" constant="5" id="5jU-aB-cQU"/>
+                            <constraint firstItem="RSD-xc-asF" firstAttribute="top" secondItem="gNd-WO-BC5" secondAttribute="bottom" constant="51" id="ATw-0b-OW7"/>
+                            <constraint firstItem="toz-ic-hC2" firstAttribute="trailing" secondItem="RSD-xc-asF" secondAttribute="trailing" constant="113" id="EDK-uW-eWH"/>
+                            <constraint firstItem="RSD-xc-asF" firstAttribute="leading" secondItem="toz-ic-hC2" secondAttribute="leading" constant="112" id="GYc-7Y-9Oj"/>
+                            <constraint firstItem="toz-ic-hC2" firstAttribute="trailing" secondItem="RSD-xc-asF" secondAttribute="trailing" constant="113" id="Jwc-VN-1KW"/>
                             <constraint firstItem="gNd-WO-BC5" firstAttribute="top" secondItem="toz-ic-hC2" secondAttribute="top" constant="48" id="Lid-Yo-FR3"/>
                             <constraint firstItem="toz-ic-hC2" firstAttribute="trailing" secondItem="gNd-WO-BC5" secondAttribute="trailing" constant="5" id="M72-We-DYP"/>
                             <constraint firstItem="tx1-ac-LCc" firstAttribute="top" secondItem="xRG-VE-n3P" secondAttribute="top" id="TXx-o6-Zhl"/>
                             <constraint firstItem="tx1-ac-LCc" firstAttribute="leading" secondItem="toz-ic-hC2" secondAttribute="leading" id="WsN-zG-hSO"/>
                             <constraint firstItem="tx1-ac-LCc" firstAttribute="trailing" secondItem="toz-ic-hC2" secondAttribute="trailing" id="gaD-Tz-Q22"/>
+                            <constraint firstItem="toz-ic-hC2" firstAttribute="bottom" secondItem="RSD-xc-asF" secondAttribute="bottom" constant="388" id="m1h-eo-I3G"/>
                             <constraint firstItem="tx1-ac-LCc" firstAttribute="bottom" secondItem="toz-ic-hC2" secondAttribute="bottom" id="nAY-QX-0B5"/>
-                            <constraint firstItem="RSD-xc-asF" firstAttribute="top" secondItem="gNd-WO-BC5" secondAttribute="bottom" constant="41" id="upp-yB-Dlo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="toz-ic-hC2"/>
                     </view>
@@ -124,8 +128,8 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="PYJ-ck-gCl">
                                 <rect key="frame" x="0.0" y="350" width="375" height="268"/>
                             </scrollView>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BgZ-bw-Doc" customClass="CircularProgressBarView" customModule="GoodHabitsApp" customModuleProvider="target">
-                                <rect key="frame" x="112" y="150" width="150" height="88"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BgZ-bw-Doc" customClass="CircularProgressBarView" customModule="GoodHabitsApp" customModuleProvider="target">
+                                <rect key="frame" x="112" y="142" width="150" height="88"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
@@ -146,7 +150,9 @@
                             <constraint firstItem="CnV-XM-4gl" firstAttribute="trailing" secondItem="BgZ-bw-Doc" secondAttribute="trailing" constant="88" id="amd-Ty-xcl"/>
                             <constraint firstItem="CnV-XM-4gl" firstAttribute="trailing" secondItem="BgZ-bw-Doc" secondAttribute="trailing" constant="101" id="fXV-cf-P3j"/>
                             <constraint firstItem="8fu-Z2-kBb" firstAttribute="top" secondItem="CnV-XM-4gl" secondAttribute="top" constant="29" id="o5B-zP-trX"/>
+                            <constraint firstItem="BgZ-bw-Doc" firstAttribute="leading" secondItem="CnV-XM-4gl" secondAttribute="leading" constant="112" id="q2O-Se-s8Q"/>
                             <constraint firstItem="PYJ-ck-gCl" firstAttribute="top" secondItem="BgZ-bw-Doc" secondAttribute="bottom" constant="120" id="qyg-c0-PYf"/>
+                            <constraint firstItem="CnV-XM-4gl" firstAttribute="trailing" secondItem="BgZ-bw-Doc" secondAttribute="trailing" constant="113" id="sYO-l5-Nt5"/>
                             <constraint firstItem="CnV-XM-4gl" firstAttribute="trailing" secondItem="8fu-Z2-kBb" secondAttribute="trailing" constant="16" id="v5m-q1-bo8"/>
                             <constraint firstAttribute="bottom" secondItem="x0R-8s-WwH" secondAttribute="bottom" constant="46" id="wEi-5W-kaS"/>
                             <constraint firstItem="8fu-Z2-kBb" firstAttribute="leading" secondItem="CnV-XM-4gl" secondAttribute="leading" constant="16" id="y3i-ow-mI6"/>
@@ -311,8 +317,8 @@
         <image name="backgroundimg" width="650" height="1155"/>
         <image name="checked" width="30" height="30"/>
         <image name="meeting" width="30" height="30"/>
-        <image name="scoring" width="24" height="24"/>
-        <image name="user" width="24" height="24"/>
+        <image name="scoring" width="19.200000762939453" height="19.200000762939453"/>
+        <image name="user" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="7Wn-IQ-qKL"/>
