--- a/GoodHabitsApp/Base.lproj/Main.storyboard
+++ b/GoodHabitsApp/Base.lproj/Main.storyboard
@@ -75,21 +75,35 @@
                                 <rect key="frame" x="112" y="473" width="150" height="88"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I1k-6a-bnZ">
+                                <rect key="frame" x="141" y="568" width="94" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Join">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="joinFriendClicked:" destination="UGQ-sc-F80" eventType="touchUpInside" id="oRb-G1-DGt"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="I1k-6a-bnZ" firstAttribute="leading" secondItem="toz-ic-hC2" secondAttribute="leading" constant="141" id="3zq-Xv-ncF"/>
                             <constraint firstItem="gNd-WO-BC5" firstAttribute="leading" secondItem="toz-ic-hC2" secondAttribute="leading" constant="5" id="5jU-aB-cQU"/>
                             <constraint firstItem="toz-ic-hC2" firstAttribute="trailing" secondItem="RSD-xc-asF" secondAttribute="trailing" constant="113" id="EDK-uW-eWH"/>
                             <constraint firstItem="RSD-xc-asF" firstAttribute="leading" secondItem="toz-ic-hC2" secondAttribute="leading" constant="112" id="GYc-7Y-9Oj"/>
                             <constraint firstItem="toz-ic-hC2" firstAttribute="bottom" secondItem="RSD-xc-asF" secondAttribute="bottom" constant="57" id="IHm-4L-mUY"/>
                             <constraint firstItem="toz-ic-hC2" firstAttribute="trailing" secondItem="RSD-xc-asF" secondAttribute="trailing" constant="113" id="Jwc-VN-1KW"/>
+                            <constraint firstItem="I1k-6a-bnZ" firstAttribute="top" secondItem="RSD-xc-asF" secondAttribute="bottom" constant="7" id="LIX-eT-g2x"/>
                             <constraint firstItem="toz-ic-hC2" firstAttribute="trailing" secondItem="gNd-WO-BC5" secondAttribute="trailing" constant="5" id="M72-We-DYP"/>
                             <constraint firstItem="tx1-ac-LCc" firstAttribute="top" secondItem="xRG-VE-n3P" secondAttribute="top" id="TXx-o6-Zhl"/>
                             <constraint firstItem="tx1-ac-LCc" firstAttribute="leading" secondItem="toz-ic-hC2" secondAttribute="leading" id="WsN-zG-hSO"/>
                             <constraint firstItem="RSD-xc-asF" firstAttribute="top" secondItem="tx1-ac-LCc" secondAttribute="bottom" constant="48" id="XHa-F9-nwZ"/>
                             <constraint firstItem="gNd-WO-BC5" firstAttribute="top" secondItem="toz-ic-hC2" secondAttribute="top" constant="261" id="f4l-hM-fvl"/>
                             <constraint firstItem="tx1-ac-LCc" firstAttribute="trailing" secondItem="toz-ic-hC2" secondAttribute="trailing" id="gaD-Tz-Q22"/>
+                            <constraint firstItem="toz-ic-hC2" firstAttribute="bottom" secondItem="I1k-6a-bnZ" secondAttribute="bottom" constant="14" id="i9I-60-Jce"/>
                             <constraint firstItem="gNd-WO-BC5" firstAttribute="leading" secondItem="toz-ic-hC2" secondAttribute="leading" constant="5" id="mo5-NI-3Lu"/>
+                            <constraint firstItem="toz-ic-hC2" firstAttribute="trailing" secondItem="I1k-6a-bnZ" secondAttribute="trailing" constant="140" id="pGR-CE-PNK"/>
                             <constraint firstItem="toz-ic-hC2" firstAttribute="trailing" secondItem="gNd-WO-BC5" secondAttribute="trailing" constant="5" id="sUc-te-OPJ"/>
                             <constraint firstItem="RSD-xc-asF" firstAttribute="top" secondItem="gNd-WO-BC5" secondAttribute="bottom" constant="169" id="xEV-Nh-msX"/>
                         </constraints>
@@ -103,7 +117,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y3g-GR-7qy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="953" y="1451"/>
+            <point key="canvasLocation" x="952.79999999999995" y="1450.5247376311845"/>
         </scene>
         <!--Progress-->
         <scene sceneID="Geo-MH-fmF">
