--- a/GoodHabitsApp/Base.lproj/Main.storyboard
+++ b/GoodHabitsApp/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wfZ-3i-FHQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wfZ-3i-FHQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -102,6 +102,13 @@
                                     <action selector="joinFriendClicked:" destination="UGQ-sc-F80" eventType="touchUpInside" id="oRb-G1-DGt"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Percentage" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PGw-PG-Wbt">
+                                <rect key="frame" x="143" y="415" width="88" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -126,6 +133,7 @@
                     <connections>
                         <outlet property="FriendCircularProgress" destination="RSD-xc-asF" id="qOM-GN-gbu"/>
                         <outlet property="friendNameLabel" destination="gNd-WO-BC5" id="eQW-hZ-Ooa"/>
+                        <outlet property="percentageLabel" destination="PGw-PG-Wbt" id="J2F-3o-z78"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y3g-GR-7qy" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -353,8 +361,8 @@
         <image name="Investment" width="30" height="30"/>
         <image name="checked" width="30" height="30"/>
         <image name="meeting" width="30" height="30"/>
-        <image name="scoring" width="24" height="24"/>
-        <image name="user" width="24" height="24"/>
+        <image name="scoring" width="19.200000762939453" height="19.200000762939453"/>
+        <image name="user" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="7Wn-IQ-qKL"/>
